# olioharjoitukset

./: README.md
h1/: CMakeLists.txt  calcsum.h  funktiot.cpp  funktiot.h  main.cpp
h2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/: CMakeLists.txt  car.cpp  main.cpp
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: CMakeLists.txt  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5/: classa1.cpp  classa1.h  classa2.cpp  classa2.h  classb.cpp  classb.h  main.cpp
h6a/: CMakeLists.txt  main.cpp  myclass.cpp
h6b/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  main.cpp
h7/: mainwindow.cpp  mainwindow.ui
